???? 0.9.3

    user visible changes, client:
    * Streamlined logging. Removed many redundant messages added some useful others.


6/4/2014 0.9.2  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fix --run where path to batch has spaces in name (Windows).

3/4/2014 0.9.1  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Fixed exception when trying to read public key file.

30/3/2014 0.9.0  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * interactive command eval renamed python.
    * New interactive command: resolve, will resolve variables in a string.

    user visible changes, admin:

    programmer visible changes:
    * Removed variable __CHECKOUT_FOLDER__, it is totaly replaced by $(ROOT_LINKS_FOLDER_REPO)/Base.
    * Moved pyinstaller build scripts to inside the instl repository
    * PUBLIC_KEY is read from  PUBLIC_KEY_FILE and PUBLIC_KEY_FILE is searched with search paths in read_include_node and in init_sync_vars.
    
13/3/2014 0.8.10  Shai Shasag <shai@waves.com>

    user visible changes, client:
    * Main feature: support for Windows XP.
    * Fixed: COPY_TOOL set to xcopy was ignored (WinXP).
    * Solved weird problems with xcopy. The /EXCLUDE option of xcopy cannot except a file with space it's path,
        nor will it except a quoted path. So the excludes file is copied to each and every target folder
        during the copy stage.
    * Fixed: when compiled raised exceptions would not cause exit code > 0 (Windows).
    * Fixed: Redundant messages when checksum fails.
    * Shorter max time for curl since now no file is > 5MB.
    * Fixed a bug in function need_to_download_file where True was always returned. This caused already downloaded files
        to be redownloaded if some situations.
    * PARALLEL_SYNC: 32 - new default

    user visible changes, admin:
    * More concise messages for create-links and up2s3

    programmer visible changes: