@@ -110,6 +110,7 @@ def prepare_args_parser():
     help_parser = subparsers.add_parser('help')
     make_sig_parser = subparsers.add_parser('make-sig', help='create sha1 checksum and rsa signature for a file')
     parallel_run_parser = subparsers.add_parser('parallel-run', help="Run processes in parallel")
+    set_exec_parser = subparsers.add_parser('set-exec', help='set executable bit for appropriate files')
     stage2svn_parser = subparsers.add_parser('stage2svn', help='add/remove files in staging to svn sync repository')
     svn2stage_parser = subparsers.add_parser('svn2stage', help='svn sync repository and copy to staging folder')
     sync_parser = subparsers.add_parser('sync', help='sync files to be installed from server to temp folder')
@@ -131,7 +132,8 @@ def prepare_args_parser():
                         create_rsa_keys_parser, make_sig_parser, check_sig_parser,
                         create_repo_rev_file_parser, verify_index_parser),
              'do_something': (version_parser, help_parser, parallel_run_parser,
-                              unwtar_parser, check_checksum_parser, create_folders_parser)
+                              unwtar_parser, check_checksum_parser, create_folders_parser,
+                              set_exec_parser)
             }
     for the_mode, parsers in modes.iteritems():
         for some_parser in parsers:
@@ -140,7 +142,7 @@ def prepare_args_parser():
     need_input_options = (sync_parser, copy_parser, synccopy_parser,
                           trans_parser, make_sig_parser, check_sig_parser,
                             verify_index_parser, parallel_run_parser, check_checksum_parser,
-                            create_folders_parser)
+                            create_folders_parser, set_exec_parser)
     need_output_options = (copy_parser, sync_parser, synccopy_parser,
                            trans_parser, create_links_parser, fix_symlinks_parser,
                            up2S3_parser, fix_props_parser, stage2svn_parser,
@@ -152,7 +154,8 @@ def prepare_args_parser():
                                 fix_props_parser, stage2svn_parser, svn2stage_parser,
                                 wtar_parser, create_rsa_keys_parser, make_sig_parser,
                                 check_sig_parser, create_repo_rev_file_parser)
-    need_progress_options = (check_checksum_parser, unwtar_parser, create_folders_parser)
+    need_progress_options = (check_checksum_parser, unwtar_parser, create_folders_parser,
+                            set_exec_parser)
 
     # add --in to parsers that need it
     for subparser in need_input_options:
